--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/domeinmodel.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/domeinmodel.tex
@@ -5,4 +5,4 @@
 \caption{Het nieuwe domeinmodel.}
 \label{fig:newDomainModel}
 \end{figure}
-Figuur \ref{fig:newDomainModel} toont het nieuwe domeinmodel voor dit project. Enkele belangrijke aanpassingen die gedaan werden op het originele domeinmodel worden hier beschreven. We introduceerden de policies in het domeinmodel. Alhoewel policies geen fysieke objecten zijn in de wereld, zijn ze een prominent deel van het project en spelen ze een belangrijke rol. Ten tweede introduceerden we het concept disaster.
+Figuur \ref{fig:newDomainModel} toont het nieuwe domeinmodel voor dit project. Enkele belangrijke aanpassingen die gedaan werden op het originele domeinmodel worden hier beschreven. We introduceerden de policies in het domeinmodel. Alhoewel policies geen fysieke objecten zijn in de wereld, zijn ze een prominent deel van het project en spelen ze een belangrijke rol. Policies zijn dan ook verre van pure fabrication objecten. Het zijn constructies die ook gegenereerd worden in de echte wereld, en waar representaties voor bestaan. Ten tweede introduceerden we het concept disaster. Een disaster is een groepering van emergencies. Deze emergencies vertonen een zeker verband met elkaar. Een emergency hoeft geen lid te zijn van een disaster, maar is het van maximum 1. Bovendien kunnen eenheden toegekend worden aan een disaster.
