--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/inleiding.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/inleiding.tex
@@ -1,7 +1,7 @@
 Dit verslag beschrijft de derde iteratie van het dispatch systeem voor het vak \textit{Software-Ontwerp}.
 \paragraph{}
 %nadruk en nieuwigheden vermelden
-Het verslag is als volgt gestructureerd. In sectie \ref{overzicht} geven we een overzicht van het systeem en zijn subsystemen.
+Het verslag is als volgt gestructureerd. We beginnen met het vernieuwde domeinmode in sectie \ref{domeinmodel}. De terminologie van dit domeinmode wordt verder uitgelegd in sectie \ref{terminologie}. In sectie \ref{overzicht} geven we een overzicht van het systeem en zijn subsystemen.
 We tonen ook hoe we de verschillende verantwoordelijkheden hebben toegewezen.
 In sectie \ref{patterns} bespreken we de invloed van \textit{GRASP} en \textit{Design Patterns} op ons ontwerp.
 Alternatieve ontwerpen die niet gekozen werden, zullen ook vermeld worden.
