--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/overzicht.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/overzicht.tex
@@ -19,19 +19,20 @@ We deelden het project op in 13 verschillende packages:
 Deze opdeling gebeurde om de verschillende lagen van elkaar te onderscheiden. Zo kunnen we bepaalde zichtbaarheidsrechten afdwingen. We zullen nu de verschillende lagen meer in detail bespreken. In de bijlage bevinden zich de system sequence diagrams en de sequence diagrams.
 
 \subsection{Domeinlaag}
- Het klassendiagram van de domeinlaag bevindt zich op figuur \ref{fig:DomeinlaagBeknopt} op pagina \pageref{fig:DomeinlaagBeknopt}. Een uitgebreider UML diagram bevindt zich in de bijlage. Voor de eenvoud is het opgesplitst in drie verschillende delen. Centraal hierin bevindt zich de klasse \texttt{Sendable}. Deze klasse bevat twee subklassen, namelijk \texttt{Emergency} en \texttt{Disaster}. Onder de klasse \texttt{Emergency} komen dan de verschillende types emergencies. Namelijk de klassen \texttt{Fire}, \texttt{PublicDisturbance}, \texttt{Robbery} en \texttt{TrafficAccident}. Ze vormen elk een subklasse met hun specifieke attributen. De klasse \texttt{Disaster} representeert een ramp. Een andere belangrijke klasse is de \texttt{Unit} klasse. Deze bevat de specifieke data over een eenheid. Omdat een \texttt{Unit} en gebouwen zoals een \texttt{Hospital} enkele eigenschappen gemeen hebben (zoals een naam en een locatie), bestaat er een superklasse die ze generaliseert. Namelijk de klasse \texttt{MapItem}. Een klasse \texttt{Building} werd overwogen, maar levert hier nog geen toegevoegde waarde. De klasse \texttt{Unit} wordt verder gespecifieerd in verschillende typen eenheden, namelijk een \texttt{Firetruck}, \texttt{Ambulance} of \texttt{Policecar}. Het is uiteraard de bedoeling dat deze units toegewezen kunnen worden aan een bepaalde \texttt{Sendable}. Deze verantwoordelijkheid wordt vervuld door de klasse \texttt{UnitsNeeded}. De klasse heeft twee kinderen: \texttt{ConcreteUnitsNeeded} \& \texttt{DerivedUnitsNeeded}. \texttt{ConcreteUnitsNeeded} houdt bij welke \texttt{Unit}s  er aan het werken zijn voor een specifieke \texttt{Emergency} en welke al klaar zijn. Verder bevat deze klasse ook een \texttt{Constraint} en een \texttt{Policy}. Deze zorgen voor een juiste assignatie van de \texttt{Unit}s. De klasse \texttt{DerivedUnitsNeeded} weet welke \texttt{Disaster} behandeld wordt en welke constraints er op van toepassing zijn. Ook bestaat er een interface \texttt{TimeSensitive}. Deze duidt aan dat een klasse die deze interface implementeert, afhankelijk is van de tijd. Een ander belangrijk aspect aan de domeinlaag is dat er geen klassen zoals \texttt{Caller} of \texttt{Call} of \texttt{Operator} bestaan. Deze bestaan alleen in het domeinmodel. Maar aangezien er nergens een use case bestaat die hiervan gebruik maakt, zijn ze overbodig.
+ Het klassendiagram van de domeinlaag bevindt zich op figuur \ref{fig:DomeinlaagBeknopt} op pagina \pageref{fig:DomeinlaagBeknopt}. Een uitgebreider UML diagram bevindt zich in de bijlage. Centraal hierin bevindt zich de klasse \texttt{Sendable}. Deze klasse bevat twee subklassen, namelijk \texttt{Emergency} en \texttt{Disaster}. Onder de klasse \texttt{Emergency} komen dan de verschillende types emergencies. Namelijk de klassen \texttt{Fire}, \texttt{PublicDisturbance}, \texttt{Robbery} en \texttt{TrafficAccident}. Ze vormen elk een subklasse met hun specifieke attributen. De klasse \texttt{Disaster} representeert een ramp. Een ramp is een groep van \texttt{Emergencies}. Een andere belangrijke klasse is de \texttt{Unit} klasse. Deze bevat de specifieke data over een eenheid. Omdat een \texttt{Unit} en gebouwen zoals een \texttt{Hospital} enkele eigenschappen gemeen hebben (zoals een naam en een locatie), bestaat er een superklasse die ze generaliseert. Namelijk de klasse \texttt{MapItem}. Een klasse \texttt{Building} werd overwogen, maar levert hier nog geen toegevoegde waarde. De klasse \texttt{Unit} wordt verder gespecificeerd in verschillende typen eenheden, namelijk een \texttt{Firetruck}, \texttt{Ambulance} of \texttt{Policecar}. Het is uiteraard de bedoeling dat deze units toegewezen kunnen worden aan een bepaalde \texttt{Sendable}. Deze verantwoordelijkheid wordt vervuld door de klasse \texttt{UnitsNeeded}. De klasse heeft twee kinderen: \texttt{ConcreteUnitsNeeded} \& \texttt{DerivedUnitsNeeded}. \texttt{ConcreteUnitsNeeded} houdt bij welke \texttt{Unit}s op dit moment een opdracht voor een specifieke \texttt{Emergency} uitvoeren en welke eenheden hun opdracht reeds voltooid hebben. Verder bevat deze klasse ook een \texttt{Constraint} en een \texttt{Policy}. Deze zorgen voor een juiste assignatie van de \texttt{Unit}s. De klasse \texttt{DerivedUnitsNeeded} weet welke \texttt{Disaster} behandeld wordt en welke constraints er op van toepassing zijn. Ook bestaat er een interface \texttt{TimeSensitive}. Deze duidt aan dat een klasse die deze interface implementeert, afhankelijk is van de tijd. Een ander belangrijk aspect aan de domeinlaag is dat er geen klassen zoals \texttt{Caller} of \texttt{Call} of \texttt{Operator} bestaan. Deze bestaan alleen in het domeinmodel. Maar aangezien er nergens een use case bestaat die hiervan gebruik maakt, zijn ze overbodig.
  
 \subsection{Domein listlaag}
-Deze laag bevat zeven klassen namelijk \texttt{Disaster\-List}, \texttt{Emergency\-Factory\-List}, \texttt{Emergency\-List}, \texttt{Generic\-Factory\-List}, \texttt{Map\-Item\-List}, \texttt{Parser\-List} \texttt{Time\-Sensitive\-List}. De \texttt{World} bevat deze klassen.
+Deze laag bevat zeven klassen namelijk \texttt{Disaster\-List}, \texttt{Emergency\-Factory\-List}, \texttt{Emergency\-List}, \texttt{Generic\-Factory\-List}, \texttt{Map\-Item\-List}, \texttt{Parser\-List} \texttt{Time\-Sensitive\-List}. De \texttt{World} bevat deze klassen. Ze hebben de functie objecten in het domein op te slaan. Verder bieden ze functionaliteiten aan om de elementen te overlopen, te filteren en te manipuleren.
 
 \subsection{Domein validatorslaag}
-In deze laag hebben we een aantal klassen die checks uitvoeren. Het eerste onderdeel dat we zullen bespreken is de \texttt{DispatchUnitsConstraint}. Dit is de basisklasse van het \textit{composite} pattern dat we gebruiken. De klasse \texttt{UnitToEmergencyDistanceComparator} vergelijkt de afstand die twee units moeten afleggen om tot hun emergency te geraken. De \texttt{UnitToDisasterDistanceComparator} doet iets gelijkaardigs voor een \texttt{Disaster}. De interface \texttt{MapItemEvaluationCriterium} specifieert een criterium om te controleren of \texttt{MapItem}s valide zijn.
+In deze laag staan klassen die objecten valideren op een bepaald criterium. De basis interface is deze laag is de \texttt{Validator}. Deze interface bied een een methode om eender welk object te testen. Voorbeelden hiervan zijn bijvoorbeeld de \texttt{TypeUnitValidator} die test of een bepaalde \texttt{Unit} van een bepaald type is. Daarnaast bevat deze laag ook \texttt{Comparator}s. Deze comparators zijn in staat om objecten te sorteren volgens bepaalde criteria. Het typevoorbeeld is de \texttt{DispatchPolicy} die eenheden sorteert volgens een bepaalde interessante eigenschap. Verder bevat de laag ook nog afgeleiden van \texttt{Validator}s zoals de \texttt{DispatchUnitsConstraint}. Deze klasse vormt de basis van het \textit{composite} pattern dat we gebruiken. En wordt gebruikt om constraint op allocatie van \texttt{Unit}s uit te drukken. De validators worden voor allerhande doeleinden gebruikt: van het filteren van element uit een lijst, tot het toekennen van eenheden aan een \texttt{Emergency}.
 
-\subsection{External systemlaag}
-De external systemlaag legt de link tussen ons programma en een specifieke interface. Deze laag bevat \'e\'en klasse namelijk \texttt{EmergencyDispatchApi}.
-
-\subsection{External system adapterlaag}
-Deze package bevat de adapters voor het external system. Deze zorgen ervoor dat ons domein niet verstrengeld raakt met een extern systeem.
+\subsection{External System laag, External System Adapter laag en de Event Handler laag}
+De External System laag legt een link tussen het gebouwde systeem, en een extern systeem. Dez laag bevat slechts \'e\'en klasse: \texttt{EmergencyDispatchApi}. En communiceert hiermee met het External System.
+\paragraph{Adapterlaag}
+Om te verhinderen dat de twee systemen afhankelijk van elkaar worden, hebben we een adapterlaag ingevoegd. Dit laat toe dat \'e\'en van de twee systemen minimaal kan veranderen zonder dat het andere systeem hier hinder van ondervindt. Dit houdt vooral in dat datastructuren van de ene in het andere systeem omgezet kunnen worden.
+\paragraph{Event Handler laag}
+Daarnaast werkt dit systeem ook
 
 \subsection{Factorieslaag}
 Om het model makkelijk uitbreidbaar te maken, waarbij zelfs bijvoorbeeld geen rekening met de user interface moet worden gehouden, hebben we een \texttt{EmergencyFactory} ge\"implementeerd. Vervolgens kan onze api een factory aanmaken en met behulp van een array van objecten de \texttt{Emergency} aanmaken. Analoog werden ook factories voor MapItems voorzien. Deze heeft nog twee subklassen, \'e\'en abstracte namelijk de \texttt{UnitFactory}, de andere is dan de \texttt{HopitalFactory}.
