--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/graspDesignPatterns.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/graspDesignPatterns.tex
@@ -35,11 +35,11 @@ We stellen onze constraints op onze emergency voor als een boom. Deze implementa
 	\label{fig:compositePattern}
 \end{figure}
 
-Tot slot kan opgemerkt worden dat in het boek er operaties in de Composite-participant gedefinieerd worden. In deze implementatie voegen we eenvoudigweg geen operaties toe. Het kennen van de parent levert voor \verb+AndDispatchUnitsConstraint+ geen meerwaarde op. Verder kan geargumenteerd worden dat de opbouw van de boom hiermee vastligt: bottom-up. Er kan dus bijgevolg geen boom met een tak naar zichzelf bestaan. \todo{Wuk wordt er hier mee bedoeltd?}Tot slot geeft het ook de mogelijkheid om een object op verschillende plaatsen in de boom in te voegen. Dit geeft de structuur dus meer dynamiek.
+Tot slot kan opgemerkt worden dat in het boek er operaties in de Composite-participant gedefinieerd worden. In deze implementatie voegen we eenvoudigweg geen operaties toe. Het kennen van de parent levert voor \verb+AndDispatchUnitsConstraint+ geen meerwaarde op. Verder kan geargumenteerd worden dat de opbouw van de boom hiermee vastligt: bottom-up. Er kan dus bijgevolg geen boom met een tak naar zichzelf bestaan. Tot slot geeft het ook de mogelijkheid om een object op verschillende plaatsen in de boom in te voegen. Dit geeft de structuur dus meer dynamiek.
 
 \subsubsection{State}
 Hoewel we geen \verb+cancel+-emergency use case moesten implementeren, anticipeerden we toch op de creatie van nieuwe toestanden waarin een emergency zich kan bevinden.
-Anderzijds willen we de voordelen die een \verb+enum+ ons biedt niet verliezen\footnote{Zoals bijvoorbeeld een opsomming van de verschillende toestanden.}. Daarom opteerden we voor een hybride structuur. Deze structuur behoudt in zekere zin de geest van het \textit{State}-pattern beschreven in het boek. In C++ zijn \verb+enum+s echter niet polymorf: het is een lijst van sleutels die met een binaire waarde geassocieerd worden. In Java kunnen elementen in een enumeratie in zekere zin als een singleton-subklasse van de enumeratie beschouwd worden\footnote{Uiteraard gaat die vergelijking niet volledig op.}. Het gevolg is dat we ook methodes aan deze elementen kunnen toewijzen en dus individueel anders kunnen implementeren. Het nadeel hiervan is dat wanneer iemand een nieuwe status willen toevoegen het moeilijk is om deze status te introduceren als de enum \texttt{EmergencyStatus} niet aangepast mag worden.
+Anderzijds willen we de voordelen die een \verb+enum+ ons biedt niet verliezen\footnote{Zoals bijvoorbeeld een opsomming van de verschillende toestanden.}. Daarom opteerden we voor een hybride structuur. Deze structuur behoudt in zekere zin de geest van het \textit{State}-pattern beschreven in het boek. In C++ zijn \verb+enum+s echter niet polymorf: het is een lijst van sleutels die met een binaire waarde geassocieerd worden. In Java kunnen elementen in een enumeratie in zekere zin als een singleton-subklasse van de enumeratie beschouwd worden\footnote{Uiteraard gaat die vergelijking niet volledig op.}. Het gevolg is dat we ook methodes aan deze elementen kunnen toewijzen en dus individueel anders kunnen implementeren. Het nadeel hiervan is dat wanneer iemand een nieuwe status wil toevoegen het moeilijk is om deze status te introduceren als de enum \texttt{EmergencyStatus} niet aangepast mag worden.
 \begin{figure}[h!]
 \includegraphics[width=1.0\textwidth]{CD_statePattern.pdf}
 \caption{UML diagram van de implementatie van het \textit{State}-pattern in het project.}
@@ -48,7 +48,7 @@ Anderzijds willen we de voordelen die een \verb+enum+ ons biedt niet verliezen\f
 Het grote nadeel van deze methode is dat alle toestanden zichtbaar zijn. Indien we dus later in het project juist een toestand willen implementeren waarover we niet kunnen filteren zal deze implementatie grondig herbekeken moeten worden. Verder biedt deze implementatie alle voordelen van het \textit{State}-pattern en een \verb+enum+.
 
 \subsubsection{Factory Method}
-Omdat units en emergencies vaak aangemaakt worden met behulp van een tekstbestand, leek het ons nuttig om hiervoor een \textit{Factory Method}-pattern te gebruiken. Op die manier kunnen we dan een set van factories bijhouden, waarbij iedere factory een bepaald directief bijhoudt. Indien bij het inlezen van het tekstbestand een directief wordt ingelezen, zal de bijbehorende factory uit de set gehaald worden, die dan vervolgens een unit of emergency aanmaakt. Hierbij werden we echter geconfronteerd met een belangrijk probleem: de parameters van de verschillende units of emergencies zijn niet uniform. We kunnen dus bijgevolg geen abstracte factorylaag bouwen waarbij de parameters gespecifieerd zijn. Dit losten we echter op door een lijst van objecten als parameter mee te geven. De implementatie is beschreven op figuur \ref{fig:factoryMethodPattern}.
+Omdat units en emergencies vaak aangemaakt worden met behulp van een tekstbestand, leek het ons nuttig om hiervoor een \textit{Factory Method}-pattern te gebruiken. Op die manier kunnen we dan een set van factories bijhouden, waarbij iedere factory een bepaald directief bijhoudt. Indien bij het inlezen van het tekstbestand een directief wordt ingelezen, zal de bijbehorende factory uit de set gehaald worden, die dan vervolgens een unit of emergency aanmaakt. Hierbij werden we echter geconfronteerd met een belangrijk probleem: de parameters van de verschillende units of emergencies zijn niet overeenkomstige. We kunnen dus bijgevolg geen abstracte factorylaag bouwen waarbij de parameters gespecifieerd zijn. Dit losten we echter op door een lijst van objecten als parameter mee te geven. De implementatie is beschreven op figuur \ref{fig:factoryMethodPattern}.
 \begin{figure}[h!]
 \includegraphics[width=1.0\textwidth]{CD_factoryMethodPattern.pdf}
 \caption{UML diagram van de implementatie van het \textit{Factory Method}-pattern in het project.}
